# steganography

./: .gitignore  README.md  canary_patterns.json  canary_probe_experiment.html  canary_probe_experiment.py  canary_puzzles.parquet  cot_redaction_rlvr_tinker.py  data_generation.py  evaluate_canary_usage.py  generate_canary_puzzles.py  generate_rollouts.py  probe_results.json  probe_results_weights.npz  prompt_logs.md  pyproject.toml  qwen3.py  reasoning_prompts.parquet  requirements.txt  rollouts.parquet
.ipynb_checkpoints/: generate_reasoning_prompts-checkpoint.py
data/prompts/: base.md
src/steganography/: __init__.py
src/steganography/core/: __init__.py  canary_detection.py
src/steganography/experiments/: __init__.py  canary_probe_experiment.py  generate_canary_puzzles.py  generate_rollouts.py
tests/: __init__.py
