[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steganography"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chz>=0.4.0",
    "nnsight>=0.6.2",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "torch>=2.10.0",
    "transformer-lens>=2.16.1",
    "transformers>=5.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
